--- a/Scratch/Base.lproj/Main.storyboard
+++ b/Scratch/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -46,10 +45,10 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wh2-3H-0co">
-                                                                    <rect key="frame" x="5" y="24" width="393" height="79.666666666666671"/>
+                                                                    <rect key="frame" x="5" y="24" width="393" height="73.666666666666671"/>
                                                                     <subviews>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="XJB-g7-IHz">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="323.33333333333331" height="79.666666666666671"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="323.33333333333331" height="73.666666666666671"/>
                                                                             <subviews>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sc3-tv-fJd">
                                                                                     <rect key="frame" x="0.0" y="0.0" width="48.333333333333336" height="28"/>
@@ -60,29 +59,32 @@
                                                                                     <nil key="textColor"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
-                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="descripton" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wDW-Wu-D5S">
-                                                                                    <rect key="frame" x="0.0" y="30.999999999999996" width="81" height="48.666666666666657"/>
+                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wDW-Wu-D5S">
+                                                                                    <rect key="frame" x="0.0" y="30.999999999999996" width="311.33333333333331" height="42.666666666666657"/>
                                                                                     <fontDescription key="fontDescription" type="system" weight="thin" pointSize="17"/>
                                                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
                                                                             </subviews>
+                                                                            <constraints>
+                                                                                <constraint firstAttribute="trailing" secondItem="wDW-Wu-D5S" secondAttribute="trailing" constant="12" id="0Hq-sl-TQO"/>
+                                                                            </constraints>
                                                                         </stackView>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" verticalHuggingPriority="252" axis="vertical" distribution="fillEqually" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="aXN-Co-szh">
-                                                                            <rect key="frame" x="323.33333333333331" y="0.0" width="69.666666666666686" height="79.666666666666671"/>
+                                                                            <rect key="frame" x="323.33333333333331" y="0.0" width="69.666666666666686" height="73.666666666666671"/>
                                                                             <subviews>
                                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5VW-YF-0v2">
-                                                                                    <rect key="frame" x="18.999999999999996" y="0.0" width="50.666666666666657" height="26.666666666666668"/>
+                                                                                    <rect key="frame" x="18.999999999999996" y="0.0" width="50.666666666666657" height="24.666666666666668"/>
                                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 </view>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y9A-9o-jgL">
-                                                                                    <rect key="frame" x="0.33333333333337123" y="26.666666666666664" width="69.333333333333329" height="26.333333333333336"/>
+                                                                                    <rect key="frame" x="0.33333333333337123" y="24.666666666666664" width="69.333333333333329" height="24.333333333333336"/>
                                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                                     <nil key="textColor"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="----" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x5L-gt-lOf">
-                                                                                    <rect key="frame" x="42" y="52.999999999999993" width="27.666666666666671" height="26.666666666666664"/>
+                                                                                    <rect key="frame" x="42" y="49" width="27.666666666666671" height="24.666666666666671"/>
                                                                                     <fontDescription key="fontDescription" type="system" weight="thin" pointSize="15"/>
                                                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                     <nil key="highlightedColor"/>
@@ -95,6 +97,13 @@
                                                                         </stackView>
                                                                     </subviews>
                                                                 </stackView>
+                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cNI-Kr-Un6">
+                                                                    <rect key="frame" x="0.0" y="101.66666666666667" width="398" height="2"/>
+                                                                    <color key="backgroundColor" red="0.43159863577934476" green="0.76134874229278993" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="2" id="V5D-Pq-rWP"/>
+                                                                    </constraints>
+                                                                </view>
                                                             </subviews>
                                                             <constraints>
                                                                 <constraint firstItem="wh2-3H-0co" firstAttribute="leading" secondItem="Da2-64-NSV" secondAttribute="leading" constant="5" id="Hdh-Hp-Tgh"/>
@@ -157,7 +166,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="wT2-ov-mJ2">
                                 <rect key="frame" x="12" y="100" width="390" height="712"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="title" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BsP-mn-Hex">
+                                    <textField opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="title" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BsP-mn-Hex">
                                         <rect key="frame" x="0.0" y="0.0" width="390" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="4pC-cE-4TD"/>
